# rs-summer-2025-labs-klaudiakosciukk

./: 404.html  index.html  pyproject.toml
assets/labs/lab_0/: index.html
assets/lectures/lecture_1/: index.html
assets/projects/bare_soil/: index.html
assets/projects/beekeeping/: index.html
assets/projects/chl_a/: index.html
assets/projects/mining_sites/: index.html
assets/projects/soil_moisture/: index.html
assets/projects/soil_tillage/: index.html
assets/projects/water_quality/: index.html
assets/projects/wheat_monitoring/: index.html
contact/: index.html
geoapps.egg-info/: PKG-INFO  top_level.txt
geoapps/lab03/: cloud_mosaic.py
introduction/: index.html
labs/: index.html
notebooks/: k_d_08_2024.csv  lab-1.ipynb  lab-2.ipynb  lab-3.ipynb  lab-4.ipnyb.ipynb  lab-5.ipynb  lab-6.ipynb  lab-7.ipynb
notebooks/geoapps/: README.md  pyproject.toml  test.py
notebooks/geoapps/geoapps.egg-info/: PKG-INFO  SOURCES.txt
notebooks/geoapps/geoapps/lab03/: cloud_mosaic.py
projects/: index.html
research/: index.html
team/: index.html
